# ORB-SLAM2

./: .gitignore  CMakeLists.txt  debug.txt  gede.ini
Data/: .Settings.Tsukuba.2.yaml.swp  .Settings.Tsukuba.yaml.swp  FrameAndMap.rviz  Settings.NewCollege.yaml  Settings.Road.yaml  Settings.Tsukuba.2.yaml  Settings.Tsukuba.small.yaml  Settings.Tsukuba.yaml  rviz.rviz
Data/TsukubaChallenge/run1/: orb1.bag  orb2.bag
Data/TsukubaChallenge/run1/original/: orb1.bag  orb2.bag
docs/: .~lock.Outlines for paper 1.odt#  Coverage Testing Run 1.eps  Coverage Testing Run 2.eps  GroundTruth.eps  Outlines for paper 1.odt  RelocalisationProcess.odt  Test Run 1 Map 1.eps  Test Run 1 Map 2.eps  Test Run 1 Map J.eps  Test Run 1.eps  Test Run 2 Map 1.eps  Test Run 2 Map 2.eps  Test Run 2 Map Joint.eps  ZoteroLibrary.bib  errors1.eps  errors2.eps  errorsj.eps  jointmap_result.eps  loop closing failure.eps  maps 1 & 3.odg  metric_convertion.eps  notes about scale correction.txt  orb-slam overview.eps  paper.lyx  partial map.eps  path-inspection.eps  robot view.eps  run1_error.eps  run2_error.eps  scale problem.eps  starting point.eps  system overview.odg  tracking 1.eps  tracking_process.odp
include/: Converter.h  Frame.h  FramePublisher.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  Map.h  MapObjectSerialization.h  MapPoint.h  MapPublisher.h  ORBmatcher.h  PnPsolver.h  Sim3Solver.h  Tracking.h  __idlist.h
src/: Converter.cc  Frame.cc  FramePublisher.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  MapPublisher.cc  ORBmatcher.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc  bag2video.cc  bag2video.py  debugList.cpp  dumpmap.cc  filter.py  grabSegwayOrb.py  localizer.cc  main.cc  mapper.cc  orb_ndt_fuse.cpp  orbndt.py  params.txt  playvideo.py  plotter.py  setOffsetBagTime.py  testchar.c  tloc.cpp
